--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,70 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# Site
+title:              Oh My Selina!
+bio:                'Walter & Selina'
+description:        "Blog."
+reading_time:       true
+words_per_minute:   200
+logo:               'assets/img/logo.png'
+background:         'assets/img/placeholder-big.jpg'
+locale:             en_US
+url:                http://taylantatli.me/Moon
 
-# Site settings
-title: Mr. Walter White
-email: walterwan1990@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Hmm...
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-# twitter_username:
-github_username:  walterwan90
+# Jekyll
+permalink:          /:title/
+markdown:           kramdown
+highlighter:        rouge
+kramdown:
+  auto_ids:         true
+  footnote_nr:      1
+  entity_output:    as_char
+  toc_levels:       1..6
+  enable_coderay:   false
+mathjax:            true
+sass:
+  sass_dir:         _sass
+  style:            compressed
 
-# Build settings
-markdown: kramdown
-timezone: Asia/Shanghai
+# Comments
+disqus_shortname:   taylantatli
+
+# Social
+# if you don't have any of social below, comment the line.
+#google:
+  #plus:            #username
+  #analytics:
+  #verify:
+  #ad-client:
+  #ad-slot:
+#bing-verify:
+email:               walterwan1990@gmail.com
+#twitter:            username
+#facebook:           username
+github:              walterwan90
+#stackoverflow:      123456/username   from a "http://stackoverflow.com/users/123456/username" link
+#linkedin:           username
+#xing:              username
+#instagram:          username
+#lastfm:             username
+#tumblr:             username
+#pinterest:         username
+#foursquare:        username
+steam:              walterwan90
+#dribbble:          username
+#youtube:            username
+#soundcloud:        username
+#weibo:             username
+#flickr:            username
+#codepen:           username
+
+# Gems
+gems:
+  - jekyll-mentions
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-gist
+
+jekyll-mentions:
+    base_url: https://github.com
+
+# Exclude list
+exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
