--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site
 title:              Walter & Selina
-bio:                'A personal plot.'
-description:        "Be simple."
+bio:                'I need more beer.'
+description:        "A Personal Plot."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 locale:             en_US
-url:                http://ohmyselina.net
+url:                http://walterwan90.github.io
 
 # Jekyll
 permalink:          /:title/
@@ -36,10 +36,10 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:               walterwan1990@gmail.com
+email:              walterwan1990@gmail.com
 #twitter:            username
 #facebook:           username
-github:              walterwan90
+github:             walterwan90
 #stackoverflow:      123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:           username
 #xing:              username
