--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,9 @@
 # Site navigation links
+- title: Home
+  url: /
 
-- title: Projects
-  url: /projects/
+- title: Blog
+  url: /blog/
+
+- title: About
+  url: /about/
