--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 locale:             en_US
 url:                http://walterwan90.github.io
+url:                http://localhost:4000
 
 # Jekyll
 permalink:          /:title/
@@ -25,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   ohmyselina
 
 # Social
 # if you don't have any of social below, comment the line.
