[养肥了的猫变企鹅]

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Walter & Selina
-bio:                'I need more beer.'
+bio:                "{ I'm not drunk yet. }"
 description:        "A Personal Plot."
 reading_time:       true
 words_per_minute:   200
