--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Walter & Selina
-bio:                '{ I\'m not drunk yet. }'
+bio:                '{ Not drunk yet. }'
 description:        "A Personal Plot."
 reading_time:       true
 words_per_minute:   200
