--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              Walter & Selina
+title:              Oh My Selina
 bio:                '{ Not drunk yet. }'
-description:        "A Personal Plot."
+description:        "A personal plot."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
@@ -48,7 +48,7 @@ github:             walterwan90
 #tumblr:             username
 #pinterest:         username
 #foursquare:        username
-steam:              walterwan90
+#steam:              username
 #dribbble:          username
 #youtube:            username
 #soundcloud:        username
