[Sublime Text 快捷键去除空行]

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Oh My Selina
+title:              Walter & Selina
 bio:                '{ Not drunk yet. }'
 description:        "A personal plot."
 reading_time:       true
