--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:              Walter & Selina
 bio:                '{ Not drunk yet. }'
 description:        "A personal plot."
-reading_time:       true
+reading_time:       false
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
