--- a/_config.yml
+++ b/_config.yml
@@ -41,14 +41,14 @@ email:              walterwan1990@gmail.com
 #facebook:           username
 github:             walterwan90
 #stackoverflow:      123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:           walterwan1990@gmail.com
+linkedin:           walterwan90
 #xing:              username
 #instagram:          username
 #lastfm:             username
 #tumblr:             username
 #pinterest:         username
 #foursquare:        username
-steam:              walterwan90
+steam:              walter_wan
 #dribbble:          username
 #youtube:            username
 #soundcloud:        username
