Change Steam profile

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ linkedin:           walterwan90
 #tumblr:             username
 #pinterest:         username
 #foursquare:        username
-steam:              walter_wan
+steam:              walterwan90
 #dribbble:          username
 #youtube:            username
 #soundcloud:        username
