--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ steam:              walterwan90
 #weibo:             username
 #flickr:            username
 #codepen:           username
+taobao:
 
 # Gems
 gems:
