--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 locale:             en_US
-url:                http://walterwan90.github.io
+url:                http://meetwk90.github.io
 
 # Jekyll
 permalink:          /:title/
@@ -36,10 +36,10 @@ disqus_shortname:   ohmyselina
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:              walterwan1990@gmail.com
+email:              meetwk90@gmail.com
 #twitter:            username
 #facebook:           username
-github:             walterwan90
+github:             meetwk90
 #stackoverflow:      123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:           walterwan90
 #xing:              username
